# maxa-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  anima.py  anima.py.bak  anima_core.py  autonomous_goals.py  consciousness.py  docker-compose.yml  goal_system.py  linkedin_series_posts.txt  memory_store.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temporal_awareness.py  test-requirements.txt  theory_of_mind.py
agent_data/: consciousness.json  goals.json  temporal.json  tom_default_user.json
app/: main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  chat.py
app/core/: config.py
app/services/: llm_service.py  memory_service.py  vector_store.py
docs/: autonomous_goals.md
monitoring/prometheus/: prometheus.yml
papers/: Makefile  README.md  main.tex  references.bib
papers/figures/: architecture.tex  personalization.tex
papers/sections/: abstract.tex  architecture.tex  conclusion.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  related_work.tex
test_agent_data/: goals.json
test_data/: consciousness.json  temporal.json  tom_test_user.json
tests/: __init__.py  conftest.py  test_autonomous_goals.py  test_chat.py  test_consciousness.py
